--- a/libSFML/Makefile
+++ b/libSFML/Makefile
@@ -1,7 +1,7 @@
 NAME	:= libSFML.so
 
 CC		:= clang++
-CFLAGS	:= -shared -fPIC -lsfml-graphics -lsfml-window -lsfml-system -rpath ~/.brew/lib #-Wall -Werror -Wextra
+CFLAGS	:= -shared -fPIC -lsfml-graphics -lsfml-window -lsfml-system -rpath ~/.brew/lib -Wall -Werror -Wextra
 
 DEPS	:= ../inc/IGraph.hpp SFMLGraph.hpp 
 SRCS	:= SFMLGraph.cpp
